T-27: SVGs preload fix

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="preload" href="no-tags.svg" as="image">
     <link rel="preload" href="ingredient-edit.svg" as="image">
     <link rel="preload" href="tags-select.svg" as="image">
+    <link rel="preload" href="dish-update-error.svg" as="image">
+    <link rel="preload" href="dish-update-success.svg" as="image">
+    <link rel="preload" href="pizza-share.svg" as="image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
