--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <link rel="preload" href="no-tags.svg" as="image">
     <link rel="preload" href="ingredient-edit.svg" as="image">
     <link rel="preload" href="tags-select.svg" as="image">
+    <link rel="preload" href="sign-in.svg" as="image">
+    <link rel="preload" href="sign-up.svg" as="image">
+    <link rel="preload" href="sign-up-success.svg" as="image">
     <link rel="preload" href="dish-update-error.svg" as="image">
     <link rel="preload" href="dish-update-success.svg" as="image">
     <link rel="preload" href="pizza-share.svg" as="image">
