--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
     <link rel="preload" href="dish-update-error.svg" as="image">
     <link rel="preload" href="dish-update-success.svg" as="image">
     <link rel="preload" href="pizza-share.svg" as="image">
+    <link rel="preload" href="error_403.svg" as="image">
+    <link rel="preload" href="error_404.svg" as="image">
+    <link rel="preload" href="error_500.svg" as="image">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
